auth ui complete

--- a/frontend/src/styles/form.css
+++ b/frontend/src/styles/form.css
@@ -25,3 +25,8 @@ button[type="submit"] {
 Form {
   font-family: "Montserrat", sans-serif;
 }
+
+.terms {
+  font-size: 12px;
+  margin-left: 3px;
+}
