--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -27,6 +27,7 @@ body {
   box-shadow: 2px;
   position: fixed;
   font-family: "Montserrat", sans-serif;
+  transition: height ease-out 500ms;
 }
 
 .rowLogin h1 {
@@ -55,7 +56,7 @@ img {
   overflow: hidden;
   box-shadow: 2px;
   position: fixed;
-  transition: transform 500ms ease-in-out;
+  transition: transform 500ms ease-in-out, height 500ms ease-out;
 }
 
 .col-signup {
