--- a/frontend/src/styles/navigate.css
+++ b/frontend/src/styles/navigate.css
@@ -23,6 +23,7 @@
   color: whitesmoke;
   font-family: "Montserrat";
   overflow: hidden;
+  z-index: 100;
 }
 
 #proImg {
@@ -36,5 +37,14 @@
   margin: -60px 90px;
   padding: 13px 10px;
   text-decoration: none;
+  color: black;
+}
+
+#brand {
+  color: black;
+  text-decoration: none;
+}
+
+#brand::hover {
   color: black;
 }
