--- a/frontend/src/styles/dashboard.css
+++ b/frontend/src/styles/dashboard.css
@@ -1,3 +1,70 @@
 .dashb-cont {
-  border: 1px solid black;
+  position: absolute;
+  top: 0;
+  font-family: "Montserrat";
+  background: url("../images/3417081.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 100vh;
+  width: 100vw;
+}
+
+.wel {
+  position: relative;
+  height: 30rem;
+  width: 25%;
+  /* border: 3px solid brown; */
+  top: 20%;
+  left: 5%;
+}
+
+.dash-btns {
+  position: absolute;
+  left: 30%;
+  top: 20%;
+  height: 40rem;
+  width: 60rem;
+  background: rgba(57, 57, 139, 0.7);
+  border-radius: 2rem;
+  /* border: 2px solid blue; */
+}
+
+.btn-new-session {
+  position: absolute;
+  top: 10rem;
+  left: 5rem;
+  height: 20rem;
+  width: 20rem;
+  background: rgb(235, 53, 53);
+  border-radius: 2rem;
+  transition: all 200ms ease-in;
+  /* border: 2px solid red; */
+}
+
+.btn-get-report {
+  position: absolute;
+  top: 10rem;
+  left: 35rem;
+  height: 20rem;
+  width: 20rem;
+  background: rgb(241, 241, 83);
+  border-radius: 2rem;
+  transition: all 200ms ease-in;
+  /* border: 2px solid green; */
+}
+
+#return {
+  position: relative;
+  left: 25px;
+  top: 25px;
+  height: 2rem;
+  width: 2rem;
+  z-index: 11;
+  opacity: 0;
+  transition: opacity 100ms ease-in 200ms;
+}
+
+.hl2 {
+  color: yellow;
+  text-align: center;
 }
