--- a/frontend/src/styles/report.css
+++ b/frontend/src/styles/report.css
@@ -24,7 +24,14 @@
 .h-rep {
   /* border: 3px solid brown; */
   margin-top: 5rem;
-  margin-left: 30rem;
-  font-size: 50px;
+  margin-left: 20rem;
+  font-size: 5rem;
   font-family: "Montserrat";
+}
+
+.h-code {
+  font-size: 5rem;
+  font-family: "Montserrat";
+  color: red;
+  margin: 0 20rem;
 }
