--- a/frontend/src/styles/report.css
+++ b/frontend/src/styles/report.css
@@ -24,7 +24,7 @@
 .h-rep {
   /* border: 3px solid brown; */
   margin-top: 5rem;
-  margin-left: 20rem;
+  margin-left: 15%;
   font-size: 5rem;
   font-family: "Montserrat";
 }
@@ -33,5 +33,5 @@
   font-size: 5rem;
   font-family: "Montserrat";
   color: red;
-  margin: 0 20rem;
+  margin: 0 15%;
 }
